--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@ Welcome to my website. I'm Prasad Patil. I look more or less like this:
 <P>
 <img src="patil.png" alt="hey" width ="225" height = "200">
 <P>
-I am a Biostatistics Ph.D student at Johns Hopkins University. I'm interested in personalized medicine, genomics, prediction, data visualization, and reproducibility. You can <b>email</b> me at <b>prpatil42 || gmail || com</b> (fill those bars in with the usual). I'm currently working on
+I am a postdoctoral research fellow in the Department of Biostatistics and Computational Biology at the Dana-Farber Cancer Institute with <a href="http://bcb.dfci.harvard.edu/~gp/">Giovanni Parimigiani</a>.
+I completed my PhD in Biostatistics at Johns Hopkins with <a href="http://jtleek.com/">Jeff Leek</a>.
+I'm interested in personalized medicine, genomics, prediction, data visualization, and study reproducibility/replicability.
+You can <b>email</b> me at <b>prpatil42 || gmail || com</b> (fill those bars in with the usual). 
+I'm currently thinking about:
 <ul>
+<li> Statistical definitions for reproducibility and replicability.</li>
 <li> Stable and interpretable prediction methods for gene expression data. The contexts are cancer risk classifcation and survival prediction.</li>
 <li> Assessing the additional value a genomic signature can provide beyond standard clinical measurements in a randomized trial setting.</li>
 <li> Interactive health visualizations executable in one line from R.</li>
 <li> Automated analysis templates with the ability to compare results after parameters have been changed.</li>
 </ul>
 <P>
-My <a href="http://www.biostat.jhsph.edu/~prpatil/Patil_CV.pdf">CV</a>.
+My <a href="http://prpatil.github.io/Patil_CV.pdf">CV</a>.
 <P>
-Check out <a href="https://github.com/prpatil">my github account</a>. Of special interest are two projects under active development: (1) <a href="https://github.com/prpatil/healthvis">healthvis</a>, an R package that generates interactive visualizations of common health datatypes using <a href="http://d3js.org">d3</a>, <a href="http://shiny.rstudio.com">shiny</a>, and <a href="http://www.htmlwidgets.org">htmlWidgets</a>; and (2) <a href="https://github.com/prpatil/tdsm">tdsm</a> (Templated Deterministic Statistical Machines), another R package dedicated to reproducible analysis and automation with minimal user input.
+Check out <a href="https://github.com/prpatil">my github account</a>. Of special interest are two projects:(1) <a href="https://github.com/prpatil/healthvis">healthvis</a>, an R package that generates interactive visualizations of common health datatypes using <a href="http://d3js.org">d3</a>, <a href="http://shiny.rstudio.com">shiny</a>, and <a href="http://www.htmlwidgets.org">htmlWidgets</a>; and (2) <a href="https://github.com/prpatil/tdsm">tdsm</a> (Templated Deterministic Statistical Machines), another R package dedicated to reproducible analysis and automation with minimal user input.
 <P>
-Thanks for coming.
+Thanks for coming. Now that I have my own domain, I *might* improve site aesthetics, if only to prove that I know how to use computers.
 </body>
 </html>
 <!-- Thanks for checking out the source code -->
