Minor updates to html, cv

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ Welcome to my website. I'm Prasad Patil. I look more or less like this:
 <P>
 <img src="patil.png" alt="hey" width ="225" height = "200">
 <P>
-I am a postdoctoral research fellow in the Department of Biostatistics and Computational Biology at the Dana-Farber Cancer Institute with <a href="http://bcb.dfci.harvard.edu/~gp/">Giovanni Parimigiani</a>.
-I completed my PhD in Biostatistics at Johns Hopkins with <a href="http://jtleek.com/">Jeff Leek</a>.
+I am a postdoctoral research fellow in the Department of Biostatistics and Computational Biology at the Dana-Farber Cancer Institute with <a href="http://bcb.dfci.harvard.edu/~gp/">Giovanni Parimigiani</a>.<br>
+I completed my PhD in Biostatistics at Johns Hopkins with <a href="http://jtleek.com/">Jeff Leek</a>.<br>
 I'm interested in personalized medicine, genomics, prediction, data visualization, and study reproducibility/replicability.
 You can <b>email</b> me at <b>prpatil42 || gmail || com</b> (fill those bars in with the usual). 
 I'm currently thinking about:
@@ -24,7 +24,7 @@ I'm currently thinking about:
 <P>
 My <a href="http://prpatil.github.io/Patil_CV.pdf">CV</a>.
 <P>
-Check out <a href="https://github.com/prpatil">my github account</a>. Of special interest are two projects:(1) <a href="https://github.com/prpatil/healthvis">healthvis</a>, an R package that generates interactive visualizations of common health datatypes using <a href="http://d3js.org">d3</a>, <a href="http://shiny.rstudio.com">shiny</a>, and <a href="http://www.htmlwidgets.org">htmlWidgets</a>; and (2) <a href="https://github.com/prpatil/tdsm">tdsm</a> (Templated Deterministic Statistical Machines), another R package dedicated to reproducible analysis and automation with minimal user input.
+Check out <a href="https://github.com/prpatil">my github account</a>. Of special interest are two projects: (1) <a href="https://github.com/prpatil/healthvis">healthvis</a>, an R package that generates interactive visualizations of common health datatypes using <a href="http://d3js.org">d3</a>, <a href="http://shiny.rstudio.com">shiny</a>, and <a href="http://www.htmlwidgets.org">htmlWidgets</a>; and (2) <a href="https://github.com/prpatil/tdsm">tdsm</a> (Templated Deterministic Statistical Machines), another R package dedicated to reproducible analysis and automation with minimal user input.
 <P>
 Thanks for coming. Now that I have my own domain, I *might* improve site aesthetics, if only to prove that I know how to use computers.
 </body>
