--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Welcome to my website. I'm Prasad Patil. I look more or less like this:
 I am a postdoctoral research fellow in the Department of Biostatistics and Computational Biology at the Dana-Farber Cancer Institute with <a href="http://bcb.dfci.harvard.edu/~gp/">Giovanni Parimigiani</a>.<br>
 I completed my PhD in Biostatistics at Johns Hopkins with <a href="http://jtleek.com/">Jeff Leek</a>.<br>
 I'm interested in personalized medicine, genomics, prediction, data visualization, and study reproducibility/replicability.
-You can <b>email</b> me at <b>prpatil42 || gmail || com</b> (fill those bars in with the usual). 
+You can <b>email</b> me at <b>prpatil42 || gmail || com</b> (fill those bars in with the usual).<br> 
 I'm currently thinking about:
 <ul>
 <li> Statistical definitions for reproducibility and replicability.</li>
