--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@ Welcome to my website. I'm Prasad Patil. I look more or less like this:
 <P>
 <img src="patil.png" alt="hey" width ="225" height = "200">
 <P>
-I am a postdoctoral research fellow in the Department of Biostatistics and Computational Biology at the Dana-Farber Cancer Institute with <a href="http://bcb.dfci.harvard.edu/~gp/">Giovanni Parimigiani</a>.<br>
-I completed my PhD in Biostatistics at Johns Hopkins with <a href="http://jtleek.com/">Jeff Leek</a>.<br>
+I am a postdoctoral research fellow in the Harvard Chan School of Public Health Department of Biostatistics/Dana-Farber Cancer Institute Department of Biostatistics and Computational Biology with <a href="http://bcb.dfci.harvard.edu/~gp/">Giovanni Parimigiani</a>.<br>
+I completed my PhD in Biostatistics from the Johns Hopkins Bloomberg School of Public Health with <a href="http://jtleek.com/">Jeff Leek</a>.<br>
 I'm interested in personalized medicine, genomics, prediction, data visualization, and study reproducibility/replicability.
 You can <b>email</b> me at <b>prpatil42 || gmail || com</b> (fill those bars in with the usual).<br> 
 I'm currently thinking about:
 <ul>
+<li> Multi-study prediction </li>
 <li> Statistical definitions for reproducibility and replicability.</li>
 <li> Stable and interpretable prediction methods for gene expression data. The contexts are cancer risk classifcation and survival prediction.</li>
 <li> Assessing the additional value a genomic signature can provide beyond standard clinical measurements in a randomized trial setting.</li>
