--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ My <a href="http://prpatil.github.io/Patil_CV.pdf">CV</a>.
 <P>
 Check out <a href="https://github.com/prpatil">my github account</a>. Of special interest are two projects: (1) <a href="https://github.com/prpatil/healthvis">healthvis</a>, an R package that generates interactive visualizations of common health datatypes using <a href="http://d3js.org">d3</a>, <a href="http://shiny.rstudio.com">shiny</a>, and <a href="http://www.htmlwidgets.org">htmlWidgets</a>; and (2) <a href="https://github.com/prpatil/tdsm">tdsm</a> (Templated Deterministic Statistical Machines), another R package dedicated to reproducible analysis and automation with minimal user input.
 <P>
-Thanks for coming. Now that I have my own domain, I *might* improve site aesthetics, if only to prove that I know how to use computers.
+Thanks for coming. Now that I have my own domain, I *may* improve site aesthetics, if only to prove that I know how to use computers.
 </body>
 </html>
 <!-- Thanks for checking out the source code -->
