--- a/cwg.html
+++ b/cwg.html
@@ -64,7 +64,7 @@ table, th, td {
   </tr>
   <tr>
     <td>November 6</td>
-    <td>Melissa</td> 
+    <td>None (DF/HCC Symposium)</td> 
     <td> </td>
   </tr>
   <tr>
@@ -84,7 +84,7 @@ table, th, td {
   </tr>
   <tr>
     <td>December 4</td>
-    <td>Theodore</td> 
+    <td>Melissa</td> 
     <td> </td>
   </tr>
   <tr>
