Updated WG schedule for 2018 Spring

--- a/cwg.html
+++ b/cwg.html
@@ -11,7 +11,7 @@ table, th, td {
 </style>
 </head>
 <body>
-<h2> 2017 Fall Semester Cancer Working Group Schedule </h2>
+<h2> 2018 Spring Semester Cancer Working Group Schedule </h2>
 <table style="width:30%">
 	<col style="width:30%">
 	<col style="width:50%">
@@ -23,73 +23,83 @@ table, th, td {
     <th>Materials</th>
   </tr>
   <tr>
-    <td>September 11</td>
-    <td>All - introductions</td> 
+    <td>January 22</td>
+    <td>Cancelled (Valen Johnson B3D Seminar)</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>September 18</td>
-    <td>David</td> 
+    <td>January 29</td>
+    <td>Theo</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>September 25</td>
-    <td>Theodore</td> 
-    <td> </td>
-  </tr>
-  <tr>
-    <td>October 2</td>
+    <td>February 5</td>
     <td>Kelly</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>October 9</td>
-    <td>None (Columbus Day)</td> 
+    <td>February 12</td>
+    <td>Alexander Gusev</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>October 16</td>
-    <td>Sam</td> 
+    <td>February 19</td>
+    <td>Cancelled (President's Day)</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>October 23</td>
+    <td>February 26</td>
+    <td>David</td> 
+    <td> </td>
+  </tr>
+  <tr>
+    <td>March 5</td>
     <td>Margaux</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>October 30</td>
-    <td>Tanayott</td> 
+    <td>March 12</td>
+    <td>Cancelled (Spring Recess)</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>November 6</td>
-    <td>None (DF/HCC Symposium)</td> 
+    <td>March 19</td>
+    <td>Tony</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>November 13</td>
+    <td>March 26</td>
     <td>Leah</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>November 20</td>
-    <td>Prasad</td> 
+    <td>April 2</td>
+    <td>Sam</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>November 27</td>
+    <td>April 9</td>
     <td>Maya</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>December 4</td>
+    <td>April 16</td>
+    <td>Divy</td> 
+    <td> </td>
+  </tr>
+  <tr>
+    <td>April 23</td>
+    <td>Prasad</td> 
+    <td> </td>
+  </tr>
+  <tr>
+    <td>April 30</td>
     <td>Melissa</td> 
     <td> </td>
   </tr>
   <tr>
-    <td>December 11</td>
-    <td>Divy</td> 
+    <td>May 7</td>
+    <td>Open</td> 
     <td> </td>
   </tr>
   
