Updated schedule due to ENAR

--- a/cwg.html
+++ b/cwg.html
@@ -69,37 +69,37 @@ table, th, td {
   </tr>
   <tr>
     <td>March 26</td>
-    <td>Leah</td> 
+    <td>Cancelled (ENAR)</td> 
     <td> </td>
   </tr>
   <tr>
     <td>April 2</td>
-    <td>Sam</td> 
+    <td>Leah</td> 
     <td> </td>
   </tr>
   <tr>
     <td>April 9</td>
-    <td>Maya</td> 
+    <td>Sam</td> 
     <td> </td>
   </tr>
   <tr>
     <td>April 16</td>
-    <td>Divy</td> 
+    <td>Maya</td> 
     <td> </td>
   </tr>
   <tr>
     <td>April 23</td>
-    <td>Prasad</td> 
+    <td>Divy</td> 
     <td> </td>
   </tr>
   <tr>
     <td>April 30</td>
-    <td>Melissa</td> 
+    <td>Prasad</td> 
     <td> </td>
   </tr>
   <tr>
     <td>May 7</td>
-    <td>Open</td> 
+    <td>Melissa</td> 
     <td> </td>
   </tr>
   
