--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ I'm currently thinking about:
 <P>
 My <a href="http://prpatil.github.io/Patil_CV.pdf">CV</a>.
 <P>
+References and PDFs of my <a href="http://prpatil.github.io/papers.html">papers</a>.
+<P>
 Check out <a href="https://github.com/prpatil">my github account</a>.
 <P>
 Thanks for coming. Now that I have my own domain, I *may* improve site aesthetics, if only to prove that I know how to use computers.
