Chagned PDF naming conventions for cleaner links

--- a/papers.html
+++ b/papers.html
@@ -8,25 +8,25 @@
 
 <ul style="list-style-type:none">
 
-<li> <b>Patil P</b>, Peng RD, Leek JT. (2016). A statistical definition for reproducibility and replicability. <i>bioRxiv</i>, 066803. (<a href="http://prpatil.github.io/Biorxv Replicability Visualization.pdf">link</a>) (new version under revision for Nature Human Behavior)</li>
+<li> <b>Patil P</b>, Peng RD, Leek JT. (2016). A statistical definition for reproducibility and replicability. <i>bioRxiv</i>, 066803. (<a href="http://prpatil.github.io/Biorxiv_Replicability_Visualization.pdf">link</a>) (new version under revision for Nature Human Behavior)</li>
 <br>
-<li><b>Patil P</b>, Parmigiani G (2018). Training replicable predictors in multiple studies. <i>Proceedings of the National Academy of Sciences</i>, 115(11), 2578-2583. (<a href="http://prpatil.github.io/PNAS Multi-Study.pdf">link</a>)</li>
+<li><b>Patil P</b>, Parmigiani G (2018). Training replicable predictors in multiple studies. <i>Proceedings of the National Academy of Sciences</i>, 115(11), 2578-2583. (<a href="http://prpatil.github.io/PNAS_Multi_Study.pdf">link</a>)</li>
 <br>
-<li><b>Patil P</b>, Peng RD, Leek, JT (2016). What Should Researchers Expect When They Replicate Studies? A Statistical View of Replicability in Psychological Science. <i>Perspectives on Psychological Science</i>, 11(4), 539-544. (<a href="http://prpatil.github.io/PPS Replicability.pdf">link</a>)</li>
+<li><b>Patil P</b>, Peng RD, Leek, JT (2016). What Should Researchers Expect When They Replicate Studies? A Statistical View of Replicability in Psychological Science. <i>Perspectives on Psychological Science</i>, 11(4), 539-544. (<a href="http://prpatil.github.io/PPS_Replicability.pdf">link</a>)</li>
 <br>
-<li><b>Patil P</b>, Colantuoni E, Rosenblum MA, Leek JT (2016). Genomic and clinical predictors for improving estimator precision in randomized trials of breast cancer treatments. <i>Contemporary Clinical Trials Communications</i>, 3: 48-54. (<a href="http://prpatil.github.io/Cont Clin Tri Comm Genomic Predictiors.pdf">link</a>)</li>
+<li><b>Patil P</b>, Colantuoni E, Rosenblum MA, Leek JT (2016). Genomic and clinical predictors for improving estimator precision in randomized trials of breast cancer treatments. <i>Contemporary Clinical Trials Communications</i>, 3: 48-54. (<a href="http://prpatil.github.io/Cont_Clin_Tri_Comm_Genomic_Predictors.pdf">link</a>)</li>
 <br>
-<li><b>Patil P</b>, Leek JT (2015). Discussion of "Visualizing statistical models: Removing the blindfold". <i>Statistical Analysis and Data Mining: The ASA Data Science Journal</i>, 8(4), 240-241. (<a href="http://prpatil.github.io/ASA Discussion.pdf">link</a>)</li>
+<li><b>Patil P</b>, Leek JT (2015). Discussion of "Visualizing statistical models: Removing the blindfold". <i>Statistical Analysis and Data Mining: The ASA Data Science Journal</i>, 8(4), 240-241. (<a href="http://prpatil.github.io/ASA_Discussion.pdf">link</a>)</li>
 <br>
-<li><b>Patil P</b>, Bachant-Winner PO, Haibe-Kains B, Leek JT (2015). Test set bias affects reproducibility of gene signatures. <i>Bioinformatics</i>, 31(14), 2318-2323. (<a href="http://prpatil.github.io/Bioinformatics Test Set Bias.pdf">link</a>)</li>
+<li><b>Patil P</b>, Bachant-Winner PO, Haibe-Kains B, Leek JT (2015). Test set bias affects reproducibility of gene signatures. <i>Bioinformatics</i>, 31(14), 2318-2323. (<a href="http://prpatil.github.io/Bioinformatics_Test_Set_Bias.pdf">link</a>)</li>
 <br>
-<li>Hyland PL, Burke LS, Pfeiffer RM, Rotunno M, Sun D, <b>Patil P</b>, Wu X, Tucker MA, Goldstein AM, Yang XR (2014). Constitutional promoter methylation and risk of familial melanoma. <i>Epigenetics</i>, 9(5), 685-692. (<a href="http://prpatil.github.io/Epiginetics Promoter Methylation.pdf">link</a>)</li>
+<li>Hyland PL, Burke LS, Pfeiffer RM, Rotunno M, Sun D, <b>Patil P</b>, Wu X, Tucker MA, Goldstein AM, Yang XR (2014). Constitutional promoter methylation and risk of familial melanoma. <i>Epigenetics</i>, 9(5), 685-692. (<a href="http://prpatil.github.io/Epiginetics_Promoter_Methylation.pdf">link</a>)</li>
 <br>
-<li>Fusaro, VA, <B>Patil P</b>, Chi CL, Contant CF, Tonellato PJ (2013). A Systems Approach to Designing Effective Clinical Trials Using Simulations. <i>Circulation</i>, 127(4), 517-526. (<a href="http://prpatil.github.io/Circulation Clinical Trial Simulation.pdf">link</a>)</li>
+<li>Fusaro, VA, <B>Patil P</b>, Chi CL, Contant CF, Tonellato PJ (2013). A Systems Approach to Designing Effective Clinical Trials Using Simulations. <i>Circulation</i>, 127(4), 517-526. (<a href="http://prpatil.github.io/Circulation_Clinical_Trial_Simualtion.pdf">link</a>)</li>
 <br>
-<li>Fusaro VA, <b>Patil P</b>, Gafni E, Wall DP, Tonellato PJ (2011). Biomedical Cloud Computing Using Amazon Web Services. <i>PLoS Computational Biology</i>. 7(8):e1002147. (<a href="http://prpatil.github.io/PLoS Cloud Computing.pdf">link</a>)</li>
+<li>Fusaro VA, <b>Patil P</b>, Gafni E, Wall DP, Tonellato PJ (2011). Biomedical Cloud Computing Using Amazon Web Services. <i>PLoS Computational Biology</i>. 7(8):e1002147. (<a href="http://prpatil.github.io/PLoS_Cloud_Computing.pdf">link</a>)</li>
 <br>
-<li>Wall DP, Kudtarkar P, Fusaro VA, Pivovarov R, <b>Patil P</b>, Tonellato PJ (2010). Cloud computing for comparative genomics. <i>BMC Bioinformatics</i> 11:259. (<a href="http://prpatil.github.io/BMC Cloud Genomics.pdf">link</a>)</li>
+<li>Wall DP, Kudtarkar P, Fusaro VA, Pivovarov R, <b>Patil P</b>, Tonellato PJ (2010). Cloud computing for comparative genomics. <i>BMC Bioinformatics</i> 11:259. (<a href="http://prpatil.github.io/BMC_Cloud_Genomics.pdf">link</a>)</li>
 <br>
 </ul>
 </body>
