fixed suffix for one reference

--- a/papers.html
+++ b/papers.html
@@ -24,7 +24,7 @@
 <br>
 <li>Fusaro, VA, <B>Patil P</b>, Chi CL, Contant CF, Tonellato PJ (2013). A Systems Approach to Designing Effective Clinical Trials Using Simulations. <i>Circulation</i>, 127(4), 517-526. (<a href="http://prpatil.github.io/Circulation_Clinical_Trial_Simualtion.pdf">link</a>)</li>
 <br>
-<li>Fusaro VA, <b>Patil P</b>, Gafni E, Wall DP, Tonellato PJ (2011). Biomedical Cloud Computing Using Amazon Web Services. <i>PLoS Computational Biology</i>. 7(8):e1002147. (<a href="http://prpatil.github.io/PLoS_Cloud_Computing.pdf">link</a>)</li>
+<li>Fusaro VA, <b>Patil P</b>, Gafni E, Wall DP, Tonellato PJ (2011). Biomedical Cloud Computing Using Amazon Web Services. <i>PLoS Computational Biology</i>. 7(8):e1002147. (<a href="http://prpatil.github.io/PLoS_Cloud_Computing.PDF">link</a>)</li>
 <br>
 <li>Wall DP, Kudtarkar P, Fusaro VA, Pivovarov R, <b>Patil P</b>, Tonellato PJ (2010). Cloud computing for comparative genomics. <i>BMC Bioinformatics</i> 11:259. (<a href="http://prpatil.github.io/BMC_Cloud_Genomics.pdf">link</a>)</li>
 <br>
