--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Welcome to my website. I'm Prasad Patil. I look more or less like this:
 <P>
 <img src="patil.png" alt="hey" width ="225" height = "200">
 <P>
-I am an assistant professor in the Department of Biostatistics at the Boston University School of Public Health.
+I am an assistant professor in the Department of Biostatistics at the Boston University School of Public Health.<br>
 I completed my post-doc at the Harvard Chan School of Public Health Department of Biostatistics/Dana-Farber Cancer Institute Department of Data Sciences with <a href="http://bcb.dfci.harvard.edu/~gp/">Giovanni Parimigiani</a>.<br>
 I completed my PhD in Biostatistics from the Johns Hopkins Bloomberg School of Public Health with <a href="http://jtleek.com/">Jeff Leek</a>.<br>
 I'm interested in personalized medicine, genomics, prediction, data visualization, and study reproducibility/replicability.
