updated paper links
added citations, updated links

--- a/papers.html
+++ b/papers.html
@@ -5,10 +5,26 @@
 <body>
 
 <h3> Papers </h3>
+Student advisees underlined
 
 <ul style="list-style-type:none">
-
-<li> <b>Patil P</b>, Peng RD, Leek JT. (2016). A statistical definition for reproducibility and replicability. <i>bioRxiv</i>, 066803. (<a href="http://prpatil.github.io/Biorxiv_Replicability_Visualization.pdf">PDF</a>) (another version under revision for Nature Human Behavior)</li>
+<li>Ren B, Patil P, Dominici F, Parmigiani G, Trippa L. (2020). Cross-study learning for generalist and specialist predictions.(<a href="https://arxiv.org/abs/2007.12807">arXiv</a>)</li>
+<br>
+<li>Deng Z, Ding F, Dwork C, Hong R, Parmigiani G, <b>Patil P</b>, Sur P (2020). Representation via representations: Domain generalization via adversarially learned invariant representations. (<a href="https://arxiv.org/abs/2006.11478">arXiv</a>)</li>
+<br>
+<li> <u>Loewinger GC</u>, <b>Patil P</b>, Kishida KK, Parmigiani G (2019+). Covariate-Profile Similarity Weighting and Bagging Studies with the Study Strap: Multi-Study Learning for Human Neurochemical Sensing. (<a href="https://www.biorxiv.org/content/10.1101/856385v1">bioRxiv</a>) </li>
+<br>
+<li> <u>Guan Z</u>, Parmigiani G, <b>Patil P</b> (2019+). Merging versus Ensembling in MultiStudy Machine Learning: Theoretical Insight from Random Effects. (<a href="https://arxiv.org/abs/1905.07382">arXiv</a>)(under revision, <i>Biometrika</i>)</li>
+<br>
+<li> Zhang Y, <b>Patil P</b>, Johnson WE, Parmigiani G (2020). Robustifying genomic classifiers to batch effects via ensemble learning. (In press, <i>Bioinformatics</i>)(<a href="https://www.biorxiv.org/content/10.1101/703587v1">bioRxiv</a>)</li>.
+<br>
+<li>Westerman K, Fernández-Sanlés A, <b>Patil P</b>, Sebastiani P, Jacques P, Starr JM, J. Deary I, Liu Q, Liu S, Elosua R, DeMeo DL (2020). Epigenomic Assessment of Cardiovascular Disease Risk and Interactions With Traditional Risk Metrics. <i>Journal of the American Heart Association</i>. 9(8):e015299.(<a href="http://prpatil.github.io/jaha_2020.pdf">PDF</a>)</li>
+<br>
+<li> Nudel J, Bishara AM, de Geus SW, <b>Patil P</b>, Srinivasan J, Hess DT, Woodson J (2020). Development and validation of machine learning models to predict gastrointestinal leak and venous thromboembolism after weight loss surgery: an analysis of the MBSAQIP database. <i>Surgical Endoscopy.</i> 17:1-10(<a href="http://prpatil.github.io/surgend_2020.pdf">PDF</a>)</li>
+<br>
+<li> <u>Ramchandran M</u>, <b>Patil P</b>, Parmigiani G (2019). Tree-weighting approaches in constructing cross-study learners. <i>Pac Symp Biocomput. 2020</i> ; 25:451-462. (<a href="http://prpatil.github.io/psb_2020.pdf">PDF</a>)(<a href="https://www.biorxiv.org/content/10.1101/698779v1">bioRxiv</a>)</li>
+<br>
+<li> <b>Patil P</b>, Peng RD, Leek JT. (2019). A visual tool for defining reproducibility and replicability. <i>Nature Human Behavior</i> 3, 650{652. (<a href="http://prpatil.github.io/nathb_2019.pdf">PDF</a>)</li>
 <br>
 <li><b>Patil P</b>, Parmigiani G (2018). Training replicable predictors in multiple studies. <i>Proceedings of the National Academy of Sciences</i>, 115(11), 2578-2583. (<a href="http://prpatil.github.io/PNAS_Multi_Study.pdf">PDF</a>)</li>
 <br>
